changee tout les cartes pour faire fonctionee le ellipsis

--- a/restaurants/la_francaise.html
+++ b/restaurants/la_francaise.html
@@ -45,36 +45,30 @@
             <h3 class="menuWrapper__box--title">Entrées<span class="menuWrapper__box--borderLeft"></span></h3>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Tartare de poulpe acidulé</h4>
-                        <p>Aux zestes d'orange</p>
-                    </div>
-                    <div class="menuCard__box--price">25€</div>
+                    <h4>Tartare de poulpe acidulé</h4>
+                    <p>Aux zestes d'orange</p>
                 </div>
+                <div class="menuCard__price">25€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard uneven">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Velouté de légumes d'antan</h4>
-                        <p>Carotte, panais, topinambour</p>
-                    </div>
-                    <div class="menuCard__box--price">35€</div>
+                    <h4>Velouté de légumes d'antan</h4>
+                    <p>Carotte, panais, topinambour</p>
                 </div>
+                <div class="menuCard__price">35€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Soupe à l'oignon</h4>
-                        <p>Revisitée</p>
-                    </div>
-                    <div class="menuCard__box--price">20€</div>
+                    <h4>Soupe à l'oignon</h4>
+                    <p>Revisitée</p>
                 </div>
+                <div class="menuCard__price">20€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
@@ -84,36 +78,30 @@
             <h3 class="menuWrapper__box--title">Plats<span class="menuWrapper__box--borderLeft"></span></h3>
             <article class="menuCard uneven">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Coquilles Saint-Jacques</h4>
-                        <p>Accompagnées d'une purée de panais</p>
-                    </div>
-                    <div class="menuCard__box--price">40€</div>
+                    <h4>Coquilles Saint-Jacques</h4>
+                    <p>Accompagnées d'une purée de panais</p>
                 </div>
+                <div class="menuCard__price">40€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Magret de canard</h4>
-                        <p>Et parmentier de pommes de terre</p>
-                    </div>
-                    <div class="menuCard__box--price">35€</div>
+                    <h4>Magret de canard</h4>
+                    <p>Et parmentier de pommes de terre</p>
                 </div>
+                <div class="menuCard__price">35€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard uneven">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Pigeonneau d’Ille-et-Vilaine</h4>
-                        <p>Sur son lit de gnocchis aux légumes</p>
-                    </div>
-                    <div class="menuCard__box--price">44€</div>
+                    <h4>Pigeonneau d’Ille-et-Vilaine</h4>
+                    <p>Sur son lit de gnocchis aux légumes</p>
                 </div>
+                <div class="menuCard__price">44€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
@@ -123,36 +111,30 @@
             <h3 class="menuWrapper__box--title">Desserts<span class="menuWrapper__box--borderLeft"></span></h3>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Pétales de violettes glacés</h4>
-                        <p>Et purée de noisettes</p>
-                    </div>
-                    <div class="menuCard__box--price">18€</div>
+                    <h4>Pétales de violettes glacés</h4>
+                    <p>Et purée de noisettes</p>
                 </div>
+                <div class="menuCard__price">18€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard uneven">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Fondant au chocolat</h4>
-                        <p>Revisité</p>
-                    </div>
-                    <div class="menuCard__box--price">22€</div>
+                    <h4>Fondant au chocolat</h4>
+                    <p>Revisité</p>
                 </div>
+                <div class="menuCard__price">22€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Millefeuille croustillant</h4>
-                        <p>Myrtilles et pâte d’amande</p>
-                    </div>
-                    <div class="menuCard__box--price">23€</div>
+                    <h4>Millefeuille croustillant</h4>
+                    <p>Myrtilles et pâte d’amande</p>
                 </div>
+                <div class="menuCard__price">23€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
