--- a/restaurants/la_note.html
+++ b/restaurants/la_note.html
@@ -45,48 +45,40 @@
             <h3 class="menuWrapper__box--title">Entrées<span class="menuWrapper__box--borderLeft"></span></h3>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Ravioles de foie gras</h4>
-                        <p>Accompagnées de leur crème à la truffe</p>
-                    </div>
-                    <div class="menuCard__box--price">25€</div>
+                    <h4>Ravioles de foie gras</h4>
+                    <p>Accompagnées de leur crème à la truffe</p>
                 </div>
+                <div class="menuCard__price">25€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard uneven">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Caviar osciètre</h4>
-                        <p>Sur blini à la farine de blé noir</p>
-                    </div>
-                    <div class="menuCard__box--price">35€</div>
+                    <h4>Caviar osciètre</h4>
+                    <p>Sur blini à la farine de blé noir</p>
                 </div>
+                <div class="menuCard__price">35€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Homard et espuma de potiron</h4>
-                        <p>Marinés aux zestes d'orange</p>
-                    </div>
-                    <div class="menuCard__box--price">20€</div>
+                    <h4>Homard et espuma de potiron</h4>
+                    <p>Marinés aux zestes d'orange</p>
                 </div>
+                <div class="menuCard__price">20€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard uneven">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Foie gras de canard cuit entier</h4>
-                        <p>Confiture de figue et pain toasté</p>
-                    </div>
-                    <div class="menuCard__box--price">35€</div>
+                    <h4>Foie gras de canard cuit entier</h4>
+                    <p>Confiture de figue et pain toasté</p>
                 </div>
+                <div class="menuCard__price">35€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
@@ -96,36 +88,30 @@
             <h3 class="menuWrapper__box--title">Plats<span class="menuWrapper__box--borderLeft"></span></h3>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Noix de coquilles Saint-Jacques</h4>
-                        <p>Sur lit de purée de céleri-rave</p>
-                    </div>
-                    <div class="menuCard__box--price">40€</div>
+                    <h4>Noix de coquilles Saint-Jacques</h4>
+                    <p>Sur lit de purée de céleri-rave</p>
                 </div>
+                <div class="menuCard__price">40€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard uneven">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Langoustine poêlée</h4>
-                        <p>Purée de patate douce</p>
-                    </div>
-                    <div class="menuCard__box--price">35€</div>
+                    <h4>Langoustine poêlée</h4>
+                    <p>Purée de patate douce</p>
                 </div>
+                <div class="menuCard__price">35€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Mijoté de queue de bœuf</h4>
-                        <p>Et riz sauvage aux zestes de citron</p>
-                    </div>
-                    <div class="menuCard__box--price">44€</div>
+                    <h4>Mijoté de queue de bœuf</h4>
+                    <p>Et riz sauvage aux zestes de citron</p>
                 </div>
+                <div class="menuCard__price">44€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
@@ -135,36 +121,30 @@
             <h3 class="menuWrapper__box--title">Desserts<span class="menuWrapper__box--borderLeft"></span></h3>
             <article class="menuCard uneven">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Macaron noisette et chocolat</h4>
-                        <p>Glace au caramel brun et sel de Guérande</p>
-                    </div>
-                    <div class="menuCard__box--price">18€</div>
+                    <h4>Macaron noisette et chocolat</h4>
+                    <p>Glace au caramel brun et sel de Guérande</p>
                 </div>
+                <div class="menuCard__price">18€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Baba au rhum revisité</h4>
-                        <p>Avec son coulis de citron</p>
-                    </div>
-                    <div class="menuCard__box--price">22€</div>
+                    <h4>Baba au rhum revisité</h4>
+                    <p>Avec son coulis de citron</p>
                 </div>
+                <div class="menuCard__price">22€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard uneven">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Tarte au citron meringuée</h4>
-                        <p>Déstructurée</p>
-                    </div>
-                    <div class="menuCard__box--price">23€</div>
+                    <h4>Tarte au citron meringuée</h4>
+                    <p>Déstructurée</p>
                 </div>
+                <div class="menuCard__price">23€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
