--- a/restaurants/le_delice.html
+++ b/restaurants/le_delice.html
@@ -45,36 +45,30 @@
             <h3 class="menuWrapper__box--title">Entrées<span class="menuWrapper__box--borderLeft"></span></h3>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Tartare de thon</h4>
-                        <p>Assaisonné au yuzu</p>
-                    </div>
-                    <div class="menuCard__box--price">25€</div>
+                    <h4>Tartare de thon</h4>
+                    <p>Assaisonné au yuzu</p>
                 </div>
+                <div class="menuCard__price">25€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard uneven">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Bouchée de homard croustillant</h4>
-                        <p>Et sa farandole de petits légumes</p>
-                    </div>
-                    <div class="menuCard__box--price">35€</div>
+                    <h4>Bouchée de homard croustillant</h4>
+                    <p>Et sa farandole de petits légumes</p>
                 </div>
+                <div class="menuCard__price">35€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Velouté de cèpes</h4>
-                        <p>Aux truffes</p>
-                    </div>
-                    <div class="menuCard__box--price">20€</div>
+                    <h4>Velouté de cèpes</h4>
+                    <p>Aux truffes</p>
                 </div>
+                <div class="menuCard__price">20€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
@@ -84,36 +78,30 @@
             <h3 class="menuWrapper__box--title">Plats<span class="menuWrapper__box--borderLeft"></span></h3>
             <article class="menuCard uneven">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Poulet rôti aux herbes de Provence</h4>
-                        <p>Et sa crème de truffe</p>
-                    </div>
-                    <div class="menuCard__box--price">40€</div>
+                    <h4>Poulet rôti aux herbes de Provence</h4>
+                    <p>Et sa crème de truffe</p>
                 </div>
+                <div class="menuCard__price">40€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Langouste rôtie</h4>
-                        <p>Et ses légumes de saison</p>
-                    </div>
-                    <div class="menuCard__box--price">35€</div>
+                    <h4>Langouste rôtie</h4>
+                    <p>Et ses légumes de saison</p>
                 </div>
+                <div class="menuCard__price">35€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard uneven">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Côte de bœuf Angus</h4>
-                        <p>Et sa purée de panais</p>
-                    </div>
-                    <div class="menuCard__box--price">44€</div>
+                    <h4>Côte de bœuf Angus</h4>
+                    <p>Et sa purée de panais</p>
                 </div>
+                <div class="menuCard__price">44€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
@@ -123,36 +111,30 @@
             <h3 class="menuWrapper__box--title">Desserts<span class="menuWrapper__box--borderLeft"></span></h3>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Farandole de desserts</h4>
-                        <p>Du chef</p>
-                    </div>
-                    <div class="menuCard__box--price">18€</div>
+                    <h4>Farandole de desserts</h4>
+                    <p>Du chef</p>
                 </div>
+                <div class="menuCard__price">18€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard uneven">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Crème brulée</h4>
-                        <p>Revisitée</p>
-                    </div>
-                    <div class="menuCard__box--price">22€</div>
+                    <h4>Crème brulée</h4>
+                    <p>Revisitée</p>
                 </div>
+                <div class="menuCard__price">22€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Tiramisu</h4>
-                        <p>À la noisette</p>
-                    </div>
-                    <div class="menuCard__box--price">23€</div>
+                    <h4>Tiramisu</h4>
+                    <p>À la noisette</p>
                 </div>
+                <div class="menuCard__price">23€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
