--- a/restaurants/confirmation.html
+++ b/restaurants/confirmation.html
@@ -26,43 +26,35 @@
             <h3 class="confirmWrapper__box--title">Vos choix<span class="confirmWrapper__box--borderLeft"></span></h3>
             <article class="menuCard even1s">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Œuf au plat</h4>
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
-                    </div>
-                    <div class="menuCard__box--prix">20€</div>
+                    <h4>Œuf au plat</h4>
+                    <p>Assaisonné à la truffe sur lit de caviar</p>
                 </div>
+                <div class="menuCard__price">20€</div>
             </article>
         </div>
         <div class="confirmWrapper__box">
             <article class="menuCard even2s">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Pigeonneau d’Ille-et-Vilaine</h4>
-                        <p>Sur son lit de gnocchis aux légumes</p>
-                    </div>
-                    <div class="menuCard__box--prix">44€</div>
+                    <h4>Pigeonneau d’Ille-et-Vilaine</h4>
+                    <p>Sur son lit de gnocchis aux légumes</p>
                 </div>
+                <div class="menuCard__price">44€</div>
             </article>                 
         </div>
         <div class="confirmWrapper__box">
             <article class="menuCard even3s">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Tiramisu</h4>
-                        <p>À la noisette</p>
-                    </div>
-                    <div class="menuCard__box--prix">23€</div>
+                    <h4>Tiramisu</h4>
+                    <p>À la noisette</p>
                 </div>
+                <div class="menuCard__price">23€</div>
             </article>
         </div>
         <div class="confirmWrapper__box">
             <h3 class="confirmWrapper__box--title">Prix ttc<span class="confirmWrapper__box--borderLeft"></span></h3>
             <article class="menuCard even4s">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Total</h4>
-                    </div>
+                    <h4>Total</h4>
                     <div class="menuCard__box--prix">87€</div>
                 </div>
             </article>
