--- a/restaurants/la_palette.html
+++ b/restaurants/la_palette.html
@@ -45,36 +45,30 @@
             <h3 class="menuWrapper__box--title">Entrées<span class="menuWrapper__box--borderLeft"></span></h3>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Fricassée d'escargots</h4>
-                        <p>Au piment d'Espelette</p>
-                    </div>
-                    <div class="menuCard__box--price">25€</div>
+                    <h4>Fricassée d'escargots</h4>
+                    <p>Au piment d'Espelette</p>
                 </div>
+                <div class="menuCard__price">25€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard uneven">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Foie gras de canard mi-cuit</h4>
-                        <p>Et ses copeaux de truffe noire</p>
-                    </div>
-                    <div class="menuCard__box--price">35€</div>
+                    <h4>Foie gras de canard mi-cuit</h4>
+                    <p>Et ses copeaux de truffe noire</p>
                 </div>
+                <div class="menuCard__price">35€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Œuf au plat</h4>
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
-                    </div>
-                    <div class="menuCard__box--price">20€</div>
+                    <h4>Œuf au plat</h4>
+                    <p>Assaisonné à la truffe sur lit de caviar</p>
                 </div>
+                <div class="menuCard__price">20€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
@@ -84,36 +78,30 @@
             <h3 class="menuWrapper__box--title">Plats<span class="menuWrapper__box--borderLeft"></span></h3>
             <article class="menuCard uneven">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Filet de bœuf aux herbes</h4>
-                        <p>Accompagné de sa ribambelle de légumes</p>
-                    </div>
-                    <div class="menuCard__box--price">40€</div>
+                    <h4>Filet de bœuf aux herbes</h4>
+                    <p>Accompagné de sa ribambelle de légumes</p>
                 </div>
+                <div class="menuCard__price">40€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Parmentier de queue de bœuf</h4>
-                        <p>À la truffe noire sur sa purée de panais</p>
-                    </div>
-                    <div class="menuCard__box--price">35€</div>
+                    <h4>Parmentier de queue de bœuf</h4>
+                    <p>À la truffe noire sur sa purée de panais</p>
                 </div>
+                <div class="menuCard__price">35€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard uneven">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Filet de turbot</h4>
-                        <p>Aux agrumes</p>
-                    </div>
-                    <div class="menuCard__box--price">44€</div>
+                    <h4>Filet de turbot</h4>
+                    <p>Aux agrumes</p>
                 </div>
+                <div class="menuCard__price">44€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
@@ -123,36 +111,30 @@
             <h3 class="menuWrapper__box--title">Desserts<span class="menuWrapper__box--borderLeft"></span></h3>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Paris-Brest</h4>
-                        <p>Revisité</p>
-                    </div>
-                    <div class="menuCard__box--price">18€</div>
+                    <h4>Paris-Brest</h4>
+                    <p>Revisité</p>
                 </div>
+                <div class="menuCard__price">18€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard uneven">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Macaron au chocolat d'exception</h4>
-                        <p>Et glace à la vanille de Madagascar</p>
-                    </div>
-                    <div class="menuCard__box--price">22€</div>
+                    <h4>Macaron au chocolat d'exception</h4>
+                    <p>Et glace à la vanille de Madagascar</p>
                 </div>
+                <div class="menuCard__price">22€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
             <article class="menuCard even">
                 <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Mousse au chocolat</h4>
-                        <p>Au piment d'Espelette et à la truffe noire</p>
-                    </div>
-                    <div class="menuCard__box--price">23€</div>
+                    <h4>Mousse au chocolat</h4>
+                    <p>Au piment d'Espelette et à la truffe noire</p>
                 </div>
+                <div class="menuCard__price">23€</div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
