--- a/restaurants/confirmation.html
+++ b/restaurants/confirmation.html
@@ -29,7 +29,7 @@
                     <h4>Œuf au plat</h4>
                     <p>Assaisonné à la truffe sur lit de caviar</p>
                 </div>
-                <div class="menuCard__price">20€</div>
+                <div class="menuCard__prix">20€</div>
             </article>
         </div>
         <div class="confirmWrapper__box">
@@ -38,7 +38,7 @@
                     <h4>Pigeonneau d’Ille-et-Vilaine</h4>
                     <p>Sur son lit de gnocchis aux légumes</p>
                 </div>
-                <div class="menuCard__price">44€</div>
+                <div class="menuCard__prix">44€</div>
             </article>                 
         </div>
         <div class="confirmWrapper__box">
@@ -47,7 +47,7 @@
                     <h4>Tiramisu</h4>
                     <p>À la noisette</p>
                 </div>
-                <div class="menuCard__price">23€</div>
+                <div class="menuCard__prix">23€</div>
             </article>
         </div>
         <div class="confirmWrapper__box">
@@ -55,8 +55,8 @@
             <article class="menuCard even4s">
                 <div class="menuCard__box">
                     <h4>Total</h4>
-                    <div class="menuCard__box--prix">87€</div>
                 </div>
+                <div class="menuCard__prix">87€</div>
             </article>
         </div>
 
